# installer-bad-old

./: .gitignore  CMakeLists.txt  EULA  GeodeInstaller.exe.manifest.in  Icon.icns  README.md  info.rc.in
pkg/: pkg_mac.sh
pkg/macOS/Contents/: Info.plist
src/: MainFrame.cpp  MainFrame.hpp  Manager.cpp  Manager.hpp  eula.hpp.in  main.cpp  objc.h  objc.mm  pages.cpp  platform.cpp  version.cpp  wx.hpp
src/fs/: fs_std_fwd.hpp
src/include/: Result.hpp  VersionInfo.hpp  info.hpp.in
src/legacy/: fs_std.hpp  fs_std_impl.hpp  optional.hpp
src/pages/: Page.cpp  Page.hpp  devinstallation.cpp  general.cpp  installation.cpp  manage.cpp  uninstallation.cpp
